emoji_window/emoji_window.h



// Message box callback type (confirmed: 1=OK, 0=Cancel)
typedef void (__stdcall *MessageBoxCallback)(int confirmed);


// 鏂囨湰瀵归綈鏂瑰紡
enum TextAlignment {
    ALIGN_LEFT = 0,
    ALIGN_CENTER = 1,
    ALIGN_RIGHT = 2
};

enum GroupBoxVisualStyle {
    GROUPBOX_STYLE_OUTLINE = 0,
    GROUPBOX_STYLE_CARD = 1,
    GROUPBOX_STYLE_PLAIN = 2,
    GROUPBOX_STYLE_HEADER_BAR = 3
};


// ========== DataGridView 鍥炶皟鍑芥暟绫诲瀷 ==========

// 鍗曞厓鏍肩偣鍑诲洖璋?(hGrid, row, col)
typedef void (__stdcall *DataGridCellClickCallback)(HWND hGrid, int row, int col);


// 鍗曞厓鏍煎弻鍑诲洖璋?(hGrid, row, col)
typedef void (__stdcall *DataGridCellDoubleClickCallback)(HWND hGrid, int row, int col);


// 鍗曞厓鏍煎€兼敼鍙樺洖璋?(hGrid, row, col)
typedef void (__stdcall *DataGridCellValueChangedCallback)(HWND hGrid, int row, int col);


    __declspec(dllexport) int __stdcall create_emoji_button_bytes(
        HWND parent,
        const unsigned char* emoji_bytes,
        int emoji_len,
        const unsigned char* text_bytes,
        int text_len,
        int x, int y, int width, int height,
        UINT32 bg_color
    );


    // Message box (OK button only, supports Unicode and Emoji)
    __declspec(dllexport) void __stdcall show_message_box_bytes(
        HWND parent,
        const unsigned char* title_bytes,
        int title_len,
        const unsigned char* message_bytes,
        int message_len,
        const unsigned char* icon_bytes,
        int icon_len
    );


    // Confirm box (with callback, supports Unicode and Emoji)
    __declspec(dllexport) void __stdcall show_confirm_box_bytes(
        HWND parent,
        const unsigned char* title_bytes,
        int title_len,
        const unsigned char* message_bytes,
        int message_len,
        const unsigned char* icon_bytes,
        int icon_len,
        MessageBoxCallback callback
    );


    // 娣诲姞 Tab 椤?
    __declspec(dllexport) int __stdcall AddTabItem(
        HWND hTabControl,
        const unsigned char* title_bytes,
        int title_len,
        HWND hContentWindow  // 鍙€夛紝鑻ヤ负 NULL 鍒欒嚜鍔ㄥ垱寤?
    );


    // 鑾峰彇鎸囧畾 Tab 鐨勫唴瀹圭獥鍙ｅ彞鏌?
    __declspec(dllexport) HWND __stdcall GetTabContentWindow(
        HWND hTabControl,
        int index
    );


    // ========== 缂栬緫妗嗗姛鑳?==========

    // 鍒涘缓缂栬緫妗嗭紙vertical_center 浠呭崟琛屾湁鏁堬級
    __declspec(dllexport) HWND __stdcall CreateEditBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=宸? 1=涓? 2=鍙?
        BOOL multiline,
        BOOL readonly,
        BOOL password,
        BOOL has_border,
        BOOL vertical_center  // 鏂囨湰鍨傜洿灞呬腑锛堜粎鍗曡鏈夋晥锛?
    );


    // 鍒涘缓褰╄壊Emoji缂栬緫妗嗭紙浣跨敤RichEdit鎺т欢锛屾敮鎸佸僵鑹瞖moji鏄剧ず锛?
    __declspec(dllexport) HWND __stdcall CreateColorEmojiEditBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=宸? 1=涓? 2=鍙?
        BOOL multiline,
        BOOL readonly,
        BOOL password,
        BOOL has_border,
        BOOL vertical_center  // 鏂囨湰鍨傜洿灞呬腑锛堜粎鍗曡鏈夋晥锛?
    );
    // ========== 鏍囩鍔熻兘 ==========  

    // 鍒涘缓鏍囩
    __declspec(dllexport) HWND __stdcall CreateLabel(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=宸? 1=涓? 2=鍙?
        BOOL word_wrap  // 鏄惁鎹㈣鏄剧ず
    );


    // 璁剧疆鏍囩鏂囨湰
    __declspec(dllexport) void __stdcall SetLabelText(
        HWND hLabel,
        const unsigned char* text_bytes,
        int text_len
    );

    // ========== 鍒嗙粍妗嗗姛鑳?==========

    // 鍒涘缓鍒嗙粍妗?
    __declspec(dllexport) HWND __stdcall CreateGroupBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* title_bytes,
        int title_len,
        UINT32 border_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );


    __declspec(dllexport) void __stdcall SetGroupBoxTitleColor(
        HWND hGroupBox,
        UINT32 title_color
    );


    __declspec(dllexport) void __stdcall SetGroupBoxStyle(
        HWND hGroupBox,
        int style
    );


    // ========== DataGridView 鍔熻兘 ==========

    // 鍒涘缓DataGridView
    __declspec(dllexport) HWND __stdcall CreateDataGridView(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL virtual_mode,
        BOOL zebra_stripe,
        UINT32 fg_color,
        UINT32 bg_color
    );


    // --- 鍒楃鐞?---

    // 娣诲姞鏂囨湰鍒?
    __declspec(dllexport) int __stdcall DataGrid_AddTextColumn(
        HWND hGrid,
        const unsigned char* header_bytes,
        int header_len,
        int width
    );


    // 娣诲姞澶嶉€夋鍒?
    __declspec(dllexport) int __stdcall DataGrid_AddCheckBoxColumn(
        HWND hGrid,
        const unsigned char* header_bytes,
        int header_len,
        int width
    );


    __declspec(dllexport) int __stdcall DataGrid_AddComboBoxColumn(
        HWND hGrid,
        const unsigned char* header_bytes,
        int header_len,
        int width
    );


    __declspec(dllexport) int __stdcall DataGrid_AddTagColumn(
        HWND hGrid,
        const unsigned char* header_bytes,
        int header_len,
        int width
    );
    // --- 琛岀鐞?---

    // 娣诲姞琛?
    __declspec(dllexport) int __stdcall DataGrid_AddRow(
        HWND hGrid
    );


    // --- 鍗曞厓鏍兼搷浣?---

    // 璁剧疆鍗曞厓鏍兼枃鏈?
    __declspec(dllexport) void __stdcall DataGrid_SetCellText(
        HWND hGrid,
        int row, int col,
        const unsigned char* text_bytes,
        int text_len
    );
    // 璁剧疆鍗曞厓鏍煎閫夋鐘舵€?
    __declspec(dllexport) void __stdcall DataGrid_SetCellChecked(
        HWND hGrid,
        int row, int col,
        BOOL checked
    );


    // 璁剧疆鍗曞厓鏍兼牱寮?
    __declspec(dllexport) void __stdcall DataGrid_SetCellStyle(
        HWND hGrid,
        int row, int col,
        UINT32 fg_color,
        UINT32 bg_color,
        BOOL bold,
        BOOL italic
    );


    // 璁剧疆閫夋嫨妯″紡
    __declspec(dllexport) void __stdcall DataGrid_SetSelectionMode(
        HWND hGrid,
        int mode  // 0=鍗曞厓鏍? 1=鏁磋
    );


    // --- 澶栬 ---

    // 璁剧疆鏄剧ず缃戞牸绾?
    __declspec(dllexport) void __stdcall DataGrid_SetShowGridLines(
        HWND hGrid,
        BOOL show
    );


    // 璁剧疆榛樿琛岄珮
    __declspec(dllexport) void __stdcall DataGrid_SetDefaultRowHeight(
        HWND hGrid,
        int height
    );


    // 璁剧疆鍒楀ご楂樺害
    __declspec(dllexport) void __stdcall DataGrid_SetHeaderHeight(
        HWND hGrid,
        int height
    );


    __declspec(dllexport) void __stdcall DataGrid_SetHeaderStyle(
        HWND hGrid,
        int style
    );


    __declspec(dllexport) void __stdcall DataGrid_SetColumnComboItems(
        HWND hGrid,
        int col_index,
        const unsigned char* items_bytes,
        int items_len
    );


    // --- 浜嬩欢鍥炶皟 ---

    // 璁剧疆鍗曞厓鏍肩偣鍑诲洖璋?
    __declspec(dllexport) void __stdcall DataGrid_SetCellClickCallback(
        HWND hGrid,
        DataGridCellClickCallback callback
    );


    // 璁剧疆鍗曞厓鏍煎弻鍑诲洖璋?
    __declspec(dllexport) void __stdcall DataGrid_SetCellDoubleClickCallback(
        HWND hGrid,
        DataGridCellDoubleClickCallback callback
    );


    // 璁剧疆鍗曞厓鏍煎€兼敼鍙樺洖璋?
    __declspec(dllexport) void __stdcall DataGrid_SetCellValueChangedCallback(
        HWND hGrid,
        DataGridCellValueChangedCallback callback
    );

    // 璁剧疆鍒楀ご瀵归綈鏂瑰紡 (0=宸﹀榻? 1=灞呬腑, 2=鍙冲榻?
    __declspec(dllexport) void __stdcall DataGrid_SetColumnHeaderAlignment(
        HWND hGrid,
        int col_index,
        int alignment
    );


    // 璁剧疆鍒楀崟鍏冩牸瀵归綈鏂瑰紡 (0=宸﹀榻? 1=灞呬腑, 2=鍙冲榻?
    __declspec(dllexport) void __stdcall DataGrid_SetColumnCellAlignment(
        HWND hGrid,
        int col_index,
        int alignment
    );