examples/Python/demo_all_components_tabs.recovered_early.py


    DLL.CreateDataGridView.argtypes = [HWND, ctypes.c_int, ctypes.c_int, ctypes.c_int, ctypes.c_int, BOOL, BOOL, UINT32, UINT32]
    DLL.CreateDataGridView.restype = HWND
    DLL.DataGrid_AddTextColumn.argtypes = [HWND, ctypes.c_void_p, ctypes.c_int, ctypes.c_int]
    DLL.DataGrid_AddCheckBoxColumn.argtypes = [HWND, ctypes.c_void_p, ctypes.c_int, ctypes.c_int]
    DLL.DataGrid_AddComboBoxColumn.argtypes = [HWND, ctypes.c_void_p, ctypes.c_int, ctypes.c_int]
    DLL.DataGrid_AddTagColumn.argtypes = [HWND, ctypes.c_void_p, ctypes.c_int, ctypes.c_int]
    DLL.DataGrid_AddRow.argtypes = [HWND]
    DLL.DataGrid_AddRow.restype = ctypes.c_int
    DLL.DataGrid_SetCellText.argtypes = [HWND, ctypes.c_int, ctypes.c_int, ctypes.c_void_p, ctypes.c_int]
    DLL.DataGrid_SetCellChecked.argtypes = [HWND, ctypes.c_int, ctypes.c_int, BOOL]
    DLL.DataGrid_SetCellStyle.argtypes = [HWND, ctypes.c_int, ctypes.c_int, UINT32, UINT32, BOOL, BOOL]
    DLL.DataGrid_SetColumnComboItems.argtypes = [HWND, ctypes.c_int, ctypes.c_void_p, ctypes.c_int]
    DLL.DataGrid_SetColumnHeaderAlignment.argtypes = [HWND, ctypes.c_int, ctypes.c_int]
    DLL.DataGrid_SetColumnCellAlignment.argtypes = [HWND, ctypes.c_int, ctypes.c_int]
    DLL.DataGrid_SetSelectionMode.argtypes = [HWND, ctypes.c_int]
    DLL.DataGrid_SetShowGridLines.argtypes = [HWND, BOOL]
    DLL.DataGrid_SetDefaultRowHeight.argtypes = [HWND, ctypes.c_int]
    DLL.DataGrid_SetHeaderHeight.argtypes = [HWND, ctypes.c_int]
    DLL.DataGrid_SetHeaderStyle.argtypes = [HWND, ctypes.c_int]
    DLL.DataGrid_SetCellClickCallback.argtypes = [HWND, dg_cb]
    DLL.DataGrid_SetCellDoubleClickCallback.argtypes = [HWND, dg_cb]
    DLL.DataGrid_SetCellValueChangedCallback.argtypes = [HWND, dg_cb]

    DLL._ButtonCB = button_cb
    DLL._ConfirmCB = confirm_cb
    DLL._MenuCB = menu_cb
    DLL._TabCB = tab_cb
    DLL._CheckBoxCB = checkbox_cb
    DLL._RadioCB = radio_cb
    DLL._ListBoxCB = listbox_cb
    DLL._ComboCB = combo_cb
    DLL._HotKeyCB = hotkey_cb
    DLL._ValueCB = value_cb
    DLL._PictureCB = picture_cb
    DLL._ProgressCB = progress_cb
    DLL._GridCB = dg_cb


def set_status(text: str) -> None:
    print(text)
    h = STATE["status"]
    if h:
        p, n, _ = s(text)
        DLL.SetLabelText(h, p, n)


def label(parent: HWND, text: str, x: int, y: int, w: int, h: int, fg=0xFF303133, bg=0xFFFFFFFF, size=13, bold=False, wrap=False) -> HWND:
    p, n, _ = s(text)
    return DLL.CreateLabel(parent, x, y, w, h, p, n, fg, bg, FONT_PTR, FONT_LEN, size, BOOL(bold), BOOL(False), BOOL(False), ALIGN_LEFT, BOOL(wrap))


def button(parent: HWND, emoji: str, text: str, x: int, y: int, w: int, h: int, bg: int, action) -> int:
    ep, en, _ = s(emoji)
    tp, tn, _ = s(text)
    bid = DLL.create_emoji_button_bytes(parent, ep, en, tp, tn, x, y, w, h, bg)
    BUTTON_ACTIONS[bid] = action
    return bid


def groupbox(parent: HWND, text: str, x: int, y: int, w: int, h: int) -> HWND:
    p, n, _ = s(text)
    g = DLL.CreateGroupBox(parent, x, y, w, h, p, n, 0xFFEBEEF5, 0xFFFFFFFF, FONT_PTR, FONT_LEN, 14, BOOL(True), BOOL(False), BOOL(False))
    DLL.SetGroupBoxStyle(g, GROUPBOX_STYLE_CARD)
    DLL.SetGroupBoxTitleColor(g, 0xFF303133)
    return g


def edit(parent: HWND, text: str, x: int, y: int, w: int, h: int, color_emoji=False) -> HWND:
    p, n, _ = s(text)
    fn = DLL.CreateColorEmojiEditBox if color_emoji else DLL.CreateEditBox
    return fn(parent, x, y, w, h, p, n, 0xFF303133, 0xFFFFFFFF, FONT_PTR, FONT_LEN, 13, BOOL(False), BOOL(False), BOOL(False), ALIGN_LEFT, BOOL(False), BOOL(False), BOOL(False), BOOL(True), BOOL(True))


def add_tab(tab: HWND, title: str) -> HWND:
    p, n, _ = s(title)
    idx = DLL.AddTabItem(tab, p, n, HWND())
    return DLL.GetTabContentWindow(tab, idx)


def show_msg(title: str, text: str, icon: str = "ℹ️") -> None:
    tp, tn, _ = s(title)
    mp, mn, _ = s(text)
    ip, inn, _ = s(icon)
    DLL.show_message_box_bytes(STATE["hwnd"], tp, tn, mp, mn, ip, inn)


def show_confirm(title: str, text: str, icon: str = "❓") -> None:
    tp, tn, _ = s(title)
    mp, mn, _ = s(text)
    ip, inn, _ = s(icon)
    DLL.show_confirm_box_bytes(STATE["hwnd"], tp, tn, mp, mn, ip, inn, STATE["confirm_cb"])

